--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,9 @@
     <groupId>be.tomcools</groupId>
     <artifactId>unit-testing-labs</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <modules>
+        <module>unit-testing-labs-fundamentals</module>
+    </modules>
     <packaging>pom</packaging>
 
     <properties>
