--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <artifactId>unit-testing-labs</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
+        <module>unit-testing-labs-intro</module>
         <module>unit-testing-labs-fundamentals</module>
     </modules>
     <packaging>pom</packaging>
