--- a/unit-testing-labs-intro/pom.xml
+++ b/unit-testing-labs-intro/pom.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>be.tomcools</groupId>
-    <artifactId>unit-testing-labs-intro</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
-
     <parent>
         <groupId>be.tomcools</groupId>
         <artifactId>unit-testing-labs</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+
+    <artifactId>intro</artifactId>
 
     <dependencies>
         <dependency>
