--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <modules>
         <module>unit-testing-labs-intro</module>
         <module>unit-testing-labs-fundamentals</module>
+        <module>unit-testing-labs-custom-matcher</module>
     </modules>
     <packaging>pom</packaging>
 
