--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>unit-testing-labs-intro</module>
         <module>unit-testing-labs-fundamentals</module>
         <module>unit-testing-labs-custom-matcher</module>
+        <module>unit-testing-sum-of-digits</module>
     </modules>
     <packaging>pom</packaging>
 
