--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>unit-testing-labs-custom-matcher</module>
         <module>unit-testing-sum-of-digits</module>
         <module>unit-testing-labs-isp-meter</module>
+        <module>unit-testing-labs-vaa</module>
     </modules>
     <packaging>pom</packaging>
 
