--- a/unit-testing-labs-vaa/pom.xml
+++ b/unit-testing-labs-vaa/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>unit-testing-labs-vaa</artifactId>
+    <artifactId>vaa</artifactId>
 
     <dependencies>
         <dependency>
