--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,17 @@
     <version>0.0.1-SNAPSHOT</version>
     <modules>
         <module>unit-testing-labs-intro</module>
+        <module>solutions/unit-testing-labs-intro</module>
         <module>unit-testing-labs-fundamentals</module>
+        <module>solutions/unit-testing-labs-fundamentals</module>
         <module>unit-testing-labs-custom-matcher</module>
+        <module>solutions/unit-testing-labs-custom-matcher</module>
         <module>unit-testing-sum-of-digits</module>
+        <module>solutions/unit-testing-sum-of-digits</module>
         <module>unit-testing-labs-isp-meter</module>
+        <module>solutions/unit-testing-labs-isp-meter</module>
         <module>unit-testing-labs-vaa</module>
+        <module>solutions/unit-testing-labs-vaa</module>
     </modules>
     <packaging>pom</packaging>
 
