--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <module>unit-testing-labs-fundamentals</module>
         <module>solutions/unit-testing-labs-fundamentals</module>
         <module>unit-testing-labs-custom-matcher</module>
-        <module>solutions/unit-testing-labs-custom-matcher</module>
+        <!--<module>solutions/unit-testing-labs-custom-matcher</module> -->
         <module>unit-testing-sum-of-digits</module>
         <module>solutions/unit-testing-sum-of-digits</module>
         <module>unit-testing-labs-isp-meter</module>
@@ -25,6 +25,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <lombok.version>1.16.6</lombok.version>
+        <maven-compiler-plugin-version>3.0</maven-compiler-plugin-version>
     </properties>
 
     <dependencyManagement>
@@ -33,7 +35,7 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.16.4</version>
+                <version>${lombok.version}</version>
             </dependency>
 
             <dependency>
@@ -72,4 +74,18 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin-version}</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
