--- a/solutions/unit-testing-labs-isp-meter/pom.xml
+++ b/solutions/unit-testing-labs-isp-meter/pom.xml
@@ -32,6 +32,12 @@
             <version>1.16.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
