--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
                 <groupId>org.hamcrest</groupId>
                 <artifactId>hamcrest-all</artifactId>
                 <version>1.3</version>
+                <scope>test</scope>
             </dependency>
 
             <dependency>
@@ -70,6 +71,13 @@
                 <artifactId>equalsverifier</artifactId>
                 <version>1.7.3</version>
                 <scope>test</scope>
+            </dependency>
+
+
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>1.7.1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
