--- a/unit-testing-labs-intro/pom.xml
+++ b/unit-testing-labs-intro/pom.xml
@@ -21,10 +21,18 @@
         </dependency>
 
         <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.4</version>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
