Added FizzBuzz lab.

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>solutions/unit-testing-labs-isp-meter</module>
         <module>unit-testing-labs-vaa</module>
         <module>solutions/unit-testing-labs-vaa</module>
+        <module>unit-testing-labs-fizz-buzz</module>
     </modules>
     <packaging>pom</packaging>
 
