String Calculator Lab

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>solutions/unit-testing-labs-vaa</module>
         <module>unit-testing-labs-fizz-buzz</module>
         <module>unit-testing-labs-bowling</module>
+        <module>unit-testing-labs-string-calculator</module>
     </modules>
     <packaging>pom</packaging>
 
