--- a/unit-testing-labs-isp-meter/pom.xml
+++ b/unit-testing-labs-isp-meter/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>isp-meter</artifactId>
+    <artifactId>unit-testing-labs-isp-meter</artifactId>
 
     <!-- JUnit -->
     <dependencies>
